roles/traefik/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.local.tigovanroy.space`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: local-tigovanroy-space-production-tls
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-ingress
  namespace: cattle-system  # Assuming Rancher is deployed in cattle-system namespace
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.tigovanroy.space`)
      kind: Rule
      services:
        - name: rancher-service  # Name of your Rancher service
          port: 80  # Assuming Rancher is serving HTTP on port 80
